Added more permgen for memory monitoring