@@ -504,6 +504,7 @@
                                 <argument>-Djava.awt.headless=true</argument>
                                 <argument>-Xmx2g</argument>
                                 <argument>-Xms1g</argument>
+                                <argument>-XX:MaxPermSize=128M</argument>
                                 <argument>-enableassertions</argument>
                                 <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4000</argument>
                                 <argument>com.splicemachine.test.SpliceTestPlatform</argument>
